--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="designation">
                                 Hi i’m
                                 <div class="typing-title">
-                                    <p>a <strong>web developer.</strong></p>
+                                    <p>a <strong>an Internet creator.</strong></p>
                                     <p>a <strong>web Designer.</strong></p>
                                     <p>a <strong>photographer.</strong></p>
                                 </div>
@@ -115,11 +115,11 @@
                             <div class="card-inner wow fadeInUp" data-wow-duration="2s">
                                 <div class="image"><img src="images/resource/user.png" alt=""></div>
                                 <div class="author">
-                                    <h3>Mahira Rashid</h3>
+                                    <h3>songlin&huyan</h3>
                                     <div class="designation">
                                         Hi i’m
                                         <div class="typing-title">
-                                            <p>a <strong>web developer.</strong></p>
+                                            <p>a <strong>an Internet creator.</strong></p>
                                             <p>a <strong>web Designer.</strong></p>
                                             <p>a <strong>photographer.</strong></p>
                                         </div>
