--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="author">
                             <h3>songlin&huyan</h3>
                             <div class="designation">
-                                Hi i’m
+                                Hi I'm
                                 <div class="typing-title">
                                     <p>a <strong>an Internet creator.</strong></p>
                                     <p>a <strong>web Designer.</strong></p>
@@ -117,7 +117,7 @@
                                 <div class="author">
                                     <h3>songlin&huyan</h3>
                                     <div class="designation">
-                                        Hi i’m
+                                        Hi I'm
                                         <div class="typing-title">
                                             <p>a <strong>an Internet creator.</strong></p>
                                             <p>a <strong>web Designer.</strong></p>
@@ -126,7 +126,7 @@
                                         <span class="typed-title"></span>
                                     </div>
                                 </div>
-                                <div class="text">.</div>
+                                <div class="text">If you want to love, you should love like an infatuated lover, a dreamer who forgets death, regard other people's gazes as will-o'-the-wisp lights, and walk your night road boldly.</div>
                                 <div class="link-btn">
                                     <a href="#" class="theme-btn btn-style-one">Download CV</a>
                                     <a href="#" class="theme-btn btn-style-two">Hire Me</a>
@@ -147,7 +147,7 @@
                         <div class="card-about card-item" id="about" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
                                 <h4 class="title">About Me</h4>
-                                <div class="text">If you want to love, you should love like a infatuated lover, love like a dreamer who forgets death, regard other people's gazes as will-o'-the-wisp lights, and walk your night road boldly.</div>
+                                <div class="text">If you want to love, you should love like an infatuated lover, a dreamer who forgets death, regard other people's gazes as will-o'-the-wisp lights, and walk your night road boldly.</div>
                                 <div class="info-list">
                                     <div class="row">
                                         <div class="col-md-6">
