--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                                 <span class="typed-title"></span>
                             </div>
                         </div>
+                        <div class="text">If you want to love, you should love like an infatuated lover, a dreamer who forgets death, regard other people's gazes as will-o'-the-wisp lights, and walk your night road boldly.</div>
                         <div class="link-btn">
                             <a href="http://www.17sucai.com/" class="theme-btn btn-style-one">Download CV</a>
                         </div>
