--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Mahira | VCard | CV HTML Template</title>
+<title>Songlin | love | Huyan</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -75,7 +75,7 @@
                     <div class="author-info" style="background-image:url(images/background/3.jpg)">
                         <div class="image"><img src="images/resource/user.png" alt=""></div>
                         <div class="author">
-                            <h3>Mahira Rashid</h3>
+                            <h3>songlin&huyan</h3>
                             <div class="designation">
                                 Hi i’m
                                 <div class="typing-title">
@@ -115,7 +115,7 @@
                             <div class="card-inner wow fadeInUp" data-wow-duration="2s">
                                 <div class="image"><img src="images/resource/user.png" alt=""></div>
                                 <div class="author">
-                                    <h3>Mahira Rashid</h3>
+                                    <h3>songlin&huyan</h3>
                                     <div class="designation">
                                         Hi i’m
                                         <div class="typing-title">
@@ -126,7 +126,7 @@
                                         <span class="typed-title"></span>
                                     </div>
                                 </div>
-                                <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incididunt labore dolore mega aliqua enim minim veniam.</div>
+                                <div class="text">If you want to love, you should love like an infatuated lover, a dreamer who forgets death, regard other people's gazes as will-o'-the-wisp lights, and walk your night road boldly.</div>
                                 <div class="link-btn">
                                     <a href="#" class="theme-btn btn-style-one">Download CV</a>
                                     <a href="#" class="theme-btn btn-style-two">Hire Me</a>
